--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 			
 		</p>
 		<img src="images/worldpop1.png" width="300" alt="Viz Example">
+
 		<img src="images/piechart.png" width="500" alt="Viz pie chart">
+
+		<img src="images/MedalsCanada.png" alt="CanadaMedal">
+
 	</main>
 </body>
 </html>
