--- a/index.html
+++ b/index.html
@@ -3,27 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/main.css">
-	<title>OLYMPIC DATA VIZ</title>
+	<title>Winter Olympics Data</title>
 </head>
 <body>
 	<main>
-		<h1>This is the Olypmic DataViz Project</h1>
-		<h2>Some header here</h2>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<h1>This is the Winter Olympic Data Viz Project</h1>
+		<h2>These are the countries who've won the most medals thorought history.</h2>
+		
+		<img src="images/Map.jpg" alt="Viz Example">
 
+		<p>Here is a breakdown of which countries won the most amount of Gold, Silver and Bronze medals.
+		<img src="images/Gold.jpg" alt="Viz GOld">
 
-			
-		</p>
-		<img src="images/worldpop1.png" width="300" alt="Viz Example">
+		<img src="images/Silver.jpg" alt="Silver">
 
-		<img src="images/piechart.png" width="500" alt="Viz pie chart">
-
-		<img src="images/MedalsCanada.png" alt="CanadaMedal">
+		<img src="images/Bronze.jpg" alt="Last Place Losers">
 
 	</main>
 </body>
